--- a/htmlfiles/Assignment010.html
+++ b/htmlfiles/Assignment010.html
@@ -11,7 +11,7 @@
 
     
 <div id="second" >
-
+    <h1>Assignment 01</h1>
     <div class="download">
         <p>
             <h2>To read the full text download the word/pdf file from here:</h2>
@@ -20,9 +20,9 @@
         </p>
         </div>
 
-    <h1>Assignment 01</h1>
+  
     <h2>
-        Compare and contrast C# and Python programming languages
+        TOPIC: Compare and contrast C# and Python programming languages
     </h2>
 
     <h1>Overview of C#</h1>
