--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 
-<link rel="stylesheet" href="../stylefiles/style.css">
+<link rel="stylesheet" href="stylefiles/style.css">
 
 </head>
 <body class="a0">
