--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
     </g>
 </a>
 
-<a xLink:href="assignment01.html">
+<a xLink:href="htmlfiles/assignment01.html">
     <g id="assignment01">
         <path class="st2" d="M240.76,18.8c-24.98,0-45.24,20.25-45.24,45.24s20.25,45.24,45.24,45.24c24.98,0,45.24-20.25,45.24-45.24
             S265.75,18.8,240.76,18.8z M248.26,100.92h-8.5v-56.8h-0.2l-11.3,6.1l-1.7-6.7l14.2-7.6h7.5V100.92z"/>
     </g>
 </a>
 
-<a xLink:href="assignment02.html">
+<a xLink:href="htmlfiles/assignment02.html">
     <g id="assignment02">
         <path class="st3" d="M302.73,96.69c-24.98,0-45.24,20.25-45.24,45.24s20.25,45.24,45.24,45.24s45.24-20.25,45.24-45.24
             S327.71,96.69,302.73,96.69z M324.16,174.92h-41.5v-5.4l6.9-6.7c16.6-15.8,24.1-24.2,24.2-34c0-6.6-3.2-12.7-12.9-12.7
@@ -83,7 +83,7 @@
     </g>
 </a>   
  
-<a xLink:href="assignment03.html">
+<a xLink:href="htmlfiles/assignment03.html">
     <g id="assignment03">
         <path class="st4" d="M287.24,196.52c-24.98,0-45.24,20.25-45.24,45.24c0,24.98,20.25,45.24,45.24,45.24
             c24.98,0,45.24-20.25,45.24-45.24C332.48,216.78,312.22,196.52,287.24,196.52z M283.26,275.02c-7.3,0-13.7-2.3-16.9-4.4l2.4-6.8
@@ -125,7 +125,7 @@
 <div id="second" class="box-2">
 
 <iframe frameborder="0" width="100%" height="600pt"
-src="index0.html" name="ouriframe" id="ouriframe"></iframe> 
+src="htmlfiles/index0.html" name="ouriframe" id="ouriframe"></iframe> 
 
 </div>
 </div>
