--- a/htmlfiles/index0.html
+++ b/htmlfiles/index0.html
@@ -17,11 +17,13 @@
 
 
 <div id="second" class="box-2">
+    <p style="color: red;" >This site is prepared as a teaching material for students. </p>
 <h1>About the Student </h1>
 <h1> Name:Amdetsion Mesele, ID: ETR/0953/09</h1>
   <p >
 
-    This site is prepared as a container for compilation of assignments of the course COTM5284, 
+    This site is prepared as a teaching material for students. 
+    ...as a container for compilation of assignments of the course COTM5284, 
     and as an assignment on its own right.  
 
 </p>
