--- a/htmlfiles/index0.html
+++ b/htmlfiles/index0.html
@@ -29,8 +29,15 @@
 
 </p>
 <p >
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus, illo. At similique error hic exercitationem harum porro 
-    consectetur ab officia. Odio nam, nesciunt sed doloremque quibusdam blanditiis? Consequuntur, accusantium alias!
+    <table style="text-align: left;">
+        <th><h2>List of assignments and description</h2></th>
+        <tr style="background-color:rgb(0, 112, 187);"><th>Assignment name</th><th>Assignment description</th><th>Remark</th></tr>
+        <tr><td>Assignment one</td><td>Comparison between C# and python</td><td>-</td></tr>
+        <tr><td>Assignment two</td><td>Preparation of .py (python exercise)</td><td>-</td></tr>
+        <tr><td>Assignment three</td><td>Preparation of .exe and installable files </td><td>-</td></tr>
+        <tr><td>Assignent four</td><td>Final project:compilation of all assignments on a website</td><td>-</td></tr>
+    </table>
+    
 </p>
 </div>
 
