--- a/htmlfiles/Assignment01.html
+++ b/htmlfiles/Assignment01.html
@@ -15,6 +15,7 @@
         .st5{fill:#2DE09F;}
     </style>
     <link rel="stylesheet" href="../stylefiles/style.css">
+    <link rel="shortcut icon" type="image/png" href="generalimages/favicon1.ico">
 </head>
 <body class=a1>
 
