--- a/htmlfiles/Thank-you.html
+++ b/htmlfiles/Thank-you.html
@@ -15,7 +15,7 @@
 
 <div id="second" class="box-2">
 
-Thank you and we will contact you soon. 
+<h1>Thank you and we will contact you soon. </h1>
     
 </div>
 </div>
