--- a/htmlfiles/Thank-you.html
+++ b/htmlfiles/Thank-you.html
@@ -8,6 +8,7 @@
     <title>Assignment for students02</title>
 
     <link rel="stylesheet" href="../stylefiles/style.css">
+    <link rel="shortcut icon" type="image/png" href="generalimages/favicon1.ico">
 </head>
 <body class="a2">
 
