--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
 
 <link rel="stylesheet" href="stylefiles/style.css">
+<link rel="shortcut icon" type="image/png" href="generalimages/fevicon.png">
 
 </head>
 <body class="a0">
