--- a/htmlfiles/Assignment02.html
+++ b/htmlfiles/Assignment02.html
@@ -15,7 +15,7 @@
         .st5{fill:#2DE09F;}
     </style>
     <link rel="stylesheet" href="../stylefiles/style.css">
-    <link rel="shortcut icon" type="image/png" href="generalimages/fevicon.png">
+    <link rel="shortcut icon" type="image/png" href="../generalimages/fevicon.png">
 </head>
 <body class="a2">
 
