--- a/htmlfiles/index0.html
+++ b/htmlfiles/index0.html
@@ -42,41 +42,19 @@
 </p>
 <fieldset>
     <legend>Interact with us</legend>
-<form action="https://formsubmit.co/ayele.architect@gmail.com" method="POST">
+<form action="https://formsubmit.co/ayele.architect@gmail.com" method="POST" enctype="multipart/form-data">
          <input type="hidden" name="_captcha" value="false">
          <input type="hidden" name="_subject" value="Option three practice email1"><br>
         <input type="hidden" name="_subject" value="New email"><br>
         <input type="email" name="email" placeholder="Email Address" required><br>
-        <input type="hidden" name="_next" value="https://ayelebedada.github.io/cotmclasspractice/htmlfiles/Thank-you.html">
         <input type="text" name="message" placeholder="Write your message here"  required><br>
-        <button type="submit">Send</button>
-       
-   </form>
-</fieldset>
-
-<fieldset>
-
-<legend>Upload file</legend>
-
-<form method="POST" action="https://formsubmit.co/ayele.architect@gmail.com" enctype="multipart/form-data">
-    <input type="hidden" name="_captcha" value="false">
-    <input type="hidden" name="_subject" value="Option three practice email2"><br>
+  
     <input type="email" name="email" placeholder="Your email" required><br>
-    <textarea name="message" placeholder="Details of your probslem"></textarea>
+    <textarea name="message" placeholder="Details of your problem"></textarea>
     <p>Attach image file.</p>
     <input type="file" name="attachment" <!--accept="image/png, image/jpeg"--> ><br>
-    <button type="submit">Send</button>
-    <input type="hidden" name="_next" value="https://ayelebedada.github.io/cotmclasspractice/htmlfiles/Thank-you.html">
-</form>
-
-</fieldset>
-
-<fieldset>
-    <legend>leave us your preferences</legend>
-        <form method="POST" action="https://formsubmit.co/ayele.architect@gmail.com" enctype="multipart/form-data">
-            <input type="hidden" name="_captcha" value="false">
-            <input type="hidden" name="_subject" value="Option three practice email3"><br>
-            <input type="email" name="email" placeholder="Your email" required><br>
+   
+         
             <div class="form-group">
                 How many times have you taken the course previously? 
                 <input type="number" min="0" max="4"> 
@@ -104,7 +82,6 @@
             <option value="Course04">Course04</option>
             </select>
             </div>
-
             <button type="submit">send</button>
             <input type="hidden" name="_next" value="https://ayelebedada.github.io/cotmclasspractice/htmlfiles/Thank-you.html">
         </form>
