--- a/htmlfiles/index0.html
+++ b/htmlfiles/index0.html
@@ -52,7 +52,7 @@
  
     <textarea name="message" placeholder="Details of your problem"></textarea>
     <p>Attach image file.</p>
-    <input type="file" name="attachment" <!--accept="image/png, image/jpeg"--> ><br>
+    <input type="file" name="attachment" ><br> <!--accept="image/png, image/jpeg"--> 
    
          
             <div class="form-group">
@@ -74,7 +74,7 @@
             </div>
             
             <div class="form-group">
-                Which of the following courses are you taking during this semseter?
+                Which of the following courses are you taking during this semester?
             <select name="course" size="4" multiple="multiple">
             <option value="Course01">Course01</option> 
             <option value="Course02">Course02</option>
