--- a/htmlfiles/index0.html
+++ b/htmlfiles/index0.html
@@ -109,6 +109,19 @@ allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; pic
 allowfullscreen>Loading...</iframe>
 </p>
 
+<div id="second" >
+    <h1>Answer to exam:</h1>
+    <div class="download">
+        <p>
+            <h2>The exam file in pdf, .py and .exe files for each exercise</h2>
+            <a href="../dwnloadfiles/Question_exam.pdf" download>Quadratic.py</a> &nbsp &nbsp &nbsp
+            <a href="../dwnloadfiles/answerone/quadratic01.py" download>Quadratic.py</a> &nbsp &nbsp &nbsp
+            <a href="../dwnloadfiles/answerone/quadratic01.exe" download>Quadratic.exe</a> &nbsp &nbsp &nbsp
+            <a href="../dwnloadfiles/answertwo/traparea.py" download>trapezium.py</a> &nbsp &nbsp &nbsp
+            <a href="../dwnloadfiles/answertwo/traparea.exe" download>trapezium.py</a> &nbsp &nbsp &nbsp
+        </p>
+        </div>
+
 
 </div>
 
