--- a/htmlfiles/index0.html
+++ b/htmlfiles/index0.html
@@ -114,11 +114,11 @@ allowfullscreen>Loading...</iframe>
     <div class="download">
         <p>
             <h2>The exam file in pdf, .py and .exe files for each exercise</h2>
-            <a href="../dwnloadfiles/Question_exam.pdf" download>Quadratic.py</a> &nbsp &nbsp &nbsp
+            <a href="../dwnloadfiles/Question_exam.pdf" download>Question_exam</a> &nbsp &nbsp &nbsp
             <a href="../dwnloadfiles/answerone/quadratic01.py" download>Quadratic.py</a> &nbsp &nbsp &nbsp
             <a href="../dwnloadfiles/answerone/quadratic01.exe" download>Quadratic.exe</a> &nbsp &nbsp &nbsp
             <a href="../dwnloadfiles/answertwo/traparea.py" download>trapezium.py</a> &nbsp &nbsp &nbsp
-            <a href="../dwnloadfiles/answertwo/traparea.exe" download>trapezium.py</a> &nbsp &nbsp &nbsp
+            <a href="../dwnloadfiles/answertwo/traparea.exe" download>trapezium.exe</a> &nbsp &nbsp &nbsp
         </p>
         </div>
 
