--- a/htmlfiles/index0.html
+++ b/htmlfiles/index0.html
@@ -31,7 +31,7 @@
 </p>
 
 <div id="second" >
-    <h1>Answer to exam:</h1>
+    <h1>Answer to mid-exam:</h1>
     <div class="download">
         <p>
             <h2>The exam file in pdf, .py and .exe files for each exercise</h2>
@@ -40,6 +40,20 @@
             <a href="../dwnloadfiles/answerone/quadratic01.exe" download>Quadratic.exe</a> &nbsp &nbsp &nbsp
             <a href="../dwnloadfiles/answertwo/traparea.py" download>trapezium.py</a> &nbsp &nbsp &nbsp
             <a href="../dwnloadfiles/answertwo/traparea.exe" download>trapezium.exe</a> &nbsp &nbsp &nbsp
+        </p>
+        </div>
+<div id="second" >
+    <h1>Answer to final-exam:</h1>
+    <div class="download">
+        <p>
+            <h2>The exam file in pdf, .py and .exe files for each exercise</h2>
+            
+            <a href="#" download>Question_exam.pdf</a> &nbsp &nbsp &nbsp
+            <a href="#" download>.py</a> &nbsp &nbsp &nbsp
+            <a href="#" download>.exe</a> &nbsp &nbsp &nbsp
+            <a href="#" download>.py</a> &nbsp &nbsp &nbsp
+            <a href="#" download>.exe</a> &nbsp &nbsp &nbsp
+            
         </p>
         </div>
 
